# customer-churn-ml-engineering

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg 
.github/workflows/: deploy.yml
artifacts/models/: model.joblib  preprocessor.joblib
data/: input.csv  output.csv
models/: model.joblib  preprocessor.joblib
notebooks/: 01_eda_baseline.ipynb
src/: config.py
src/api/: main.py  schemas.py
src/customer_churn_ml_engineering/: config.py
src/customer_churn_ml_engineering.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/customer_churn_ml_engineering/data/: loader.py
src/customer_churn_ml_engineering/features/: preprocess.py
src/customer_churn_ml_engineering/models/: evaluate.py  predict.py  train.py
src/customer_churn_ml_engineering/utils/: paths.py  schema.py
src/data/: loader.py
src/features/: preprocess.py
src/models/: evaluate.py  predict.py  train.py
src/utils/: helpers.py
tests/: test_artifacts.py  test_batch_predict.py  test_loader.py  test_predict.py  test_preprocess.py  test_preprocessing.py  test_schema.py  test_smoke.py  test_target.py  test_train.py
