[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-churn-ml-engineering"
version = "0.1.0"
description = "Customer churn ML project with full pipeline, inference, and packaging"
authors = [
    { name="Muluneh Gashaw Teklu", email="muluneh.gashaw@gmail.com" }
]
dependencies = [
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "xgboost>=1.7",
    "joblib>=1.2",
    "pytest>=7.0"
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]